--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 
 <body>
     <header>
-        <h1>Zach Drake</h1>
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div id="header-container">
+                <h1 id="brand">Zach Drake</h1>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+        </div>
     </header>
 
-    <div id="container">
-        <div id="content">
+    <div class="container">
+        <div class="content">
             <h2>About Me</h2>
             <hr>
-            <img src="assets/images/zdrakesmall.JPG" title="Zach Drake" alt="a photo of me">
+            <img id="zsmall" src="assets/images/zdrakesmall.JPG" title="Zach Drake" alt="a photo of me">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe rerum ex deserunt esse similique aperiam.</p>
         </div>
     </div>
