--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <h2>About Me</h2>
             <hr>
             <img id="zsmall" src="assets/images/zdrakesmall.JPG" title="Zach Drake" alt="a photo of me">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe rerum ex deserunt esse similique aperiam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic beatae officiis ullam eligendi voluptatem dolorum quam voluptates, aspernatur quis cumque, aperiam minus illo doloremque mollitia iste fugit earum cum, nobis laudantium facere inventore velit! Ex veniam ipsum fugit quas ea harum recusandae distinctio ducimus atque?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae assumenda rem possimus sint? Excepturi ut tenetur, animi accusamus aliquam illo eaque debitis sequi cum, corporis doloremque nobis hic repellendus necessitatibus eligendi nesciunt ratione sed perferendis. Ab autem doloribus numquam provident dolor quae fuga doloremque odio.</p>
         </div>
     </div>
 
