--- a/portfolio.html
+++ b/portfolio.html
@@ -11,39 +11,48 @@
 
 <body>
     <header>
-        <h1 id="brand">Zach Drake</h1>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div id="header-container">
+            <h1 id="brand">Zach Drake</h1>
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
     </header>
 
     <div class="container">
         <div class="content">
             <h2>Portfolio</h2>
             <hr>
-            <div id="frame">
-                <div id="row1">
-                    <div id="col1">
-                        <div>
-                            <img src="assets/images/1.jpg" alt="hangman">
-                            <div><h6>Hangman</h6></div>
+
+            <div class="row">
+                <div class="col">
+
+                    <img class="port-img" src="assets/images/1.jpg">
+                    <div class="img-label">
+                        <h6>Hangman</h6>
+                    </div>
+
+                </div>
+                <div class="col">
+                        <img class="port-img" src="assets/images/2.jpg">
+                        <div class="img-label">
+                            <h6>RPG Game</h6>
                         </div>
-                        
-                    </div>
-                </div>
-                <div id="row2">
-                    <div id="col2">
-
-                    </div>
-                </div>
-                <div id="row3">
-                    <div id="col3">
-
-                    </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+
+                </div>
+            </div>
+
         </div>
     </div>
 
