--- a/portfolio.html
+++ b/portfolio.html
@@ -26,32 +26,40 @@
             <h2>Portfolio</h2>
             <hr>
 
-            <div class="row">
-                <div class="col">
+            <div class="port-img">
+                <div class="img-label">
+                    <h6>Hangman</h6>
+                </div>
+                <img src="assets/images/1.jpg">
+            </div>
 
-                    <img class="port-img" src="assets/images/1.jpg">
+            <div class="port-img">
+                <div class="img-label">
+                    <h6>RPG Game</h6>
+                </div>
+                <img src="assets/images/2.jpg">
+            </div>
+
+            <div class="port-img">
+                <div class="img-label">
+                    <h6>Gif Generator</h6>
+                </div>
+                <img src="assets/images/3.jpg">
+            </div>
+
+            <div class="port-img">
+                <div class="img-label">
+                    <h6>Placeholder</h6>
+                </div>
+                <img src="assets/images/4.jpg">
+            </div>
+
+            <div class="port-img">
                     <div class="img-label">
-                        <h6>Hangman</h6>
+                        <h6>Placeholder 2</h6>
                     </div>
-
+                    <img src="assets/images/5.jpg">
                 </div>
-                <div class="col">
-                        <img class="port-img" src="assets/images/2.jpg">
-                        <div class="img-label">
-                            <h6>RPG Game</h6>
-                        </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-
-                </div>
-            </div>
 
         </div>
     </div>
