--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <div id="header-container">
-                <h1 id="brand">Zach Drake</h1>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+            <h1 id="brand">Zach Drake</h1>
+            <div id="nav">
+                <div><a href="index.html">About</a></div>
+                <div><a href="portfolio.html">Portfolio</a></div>
+                <div><a href="#">Contact</a></div>
+            </div>
         </div>
     </header>
 
