--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
     <header>
         <div id="header-container">
             <h1 id="brand">Zach Drake</h1>
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <div id="nav">
+                <div><a href="index.html">About</a></div>
+                <div><a href="#">Portfolio</a></div>
+                <div><a href="contact.html">Contact</a></div>
+            </div>
         </div>
     </header>
 
