--- a/portfolio.html
+++ b/portfolio.html
@@ -28,38 +28,38 @@
 
             <div class="port-img">
                 <div class="img-label">
-                    <h6>Hangman</h6>
+                    <a href="https://zachdrake.github.io/GifTastic/" target="_blank"><h6>Giphy Generator</h6></a>
                 </div>
-                <img src="assets/images/1.jpg">
+                <img src="assets/images/rally-gen.PNG">
             </div>
 
             <div class="port-img">
                 <div class="img-label">
-                    <h6>RPG Game</h6>
+                    <a href="https://zachdrake.github.io/train-scheduler/" target="_blank"><h6>Train Time</h6></a>             
                 </div>
-                <img src="assets/images/2.jpg">
+                <img src="assets/images/train-time.PNG">
             </div>
 
             <div class="port-img">
                 <div class="img-label">
-                    <h6>Gif Generator</h6>
+                    <a href="https://khzooming.github.io/CircusBear/" target="_blank"><h6>Ride Defied</h6></a>
                 </div>
-                <img src="assets/images/3.jpg">
+                <img src="assets/images/ride-defied.PNG">
             </div>
 
-            <div class="port-img">
+            <!-- <div class="port-img">
                 <div class="img-label">
-                    <h6>Placeholder</h6>
+                    <a href="#" target="_blank"><h6></h6></a>
                 </div>
                 <img src="assets/images/4.jpg">
             </div>
 
             <div class="port-img">
                 <div class="img-label">
-                    <h6>Placeholder 2</h6>
+                    <a href="#" target="_blank"><h6></h6></a>
                 </div>
                 <img src="assets/images/5.jpg">
-            </div>
+            </div> -->
 
         </div>
     </div>
