linkedIn/Github links added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Zach Drake's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <div id="nav">
                 <div><a href="#">About</a></div>
                 <div><a href="portfolio.html">Portfolio</a></div>
-                <div><a href="contact.html">Contact</a></div>
+                <!-- <div><a href="contact.html">Contact</a></div> -->
             </div>
         </div>
     </header>
@@ -34,6 +35,9 @@
                 ut tenetur, animi accusamus aliquam illo eaque debitis sequi cum, corporis doloremque nobis hic
                 repellendus necessitatibus eligendi nesciunt ratione sed perferendis. Ab autem doloribus numquam
                 provident dolor quae fuga doloremque odio.</p>
+                <br><br>
+                <a class="links" href="https://www.linkedin.com/in/zachary-drake-036baa11a/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                <a class="links" href="https://github.com/ZachDrake" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
         </div>
     </div>
 
