--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <div id="nav">
                 <div><a href="index.html">About</a></div>
                 <div><a href="#">Portfolio</a></div>
-                <!-- <div><a href="contact.html">Contact</a></div> -->
+                <div><a href="contact.html">Contact</a></div>
             </div>
         </div>
     </header>
