--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Zach Drake's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
@@ -26,16 +27,11 @@
             <h2>Contact</h2>
             <hr>
             <div id="form-frame">
-                <form>
-                    <span>Name:</span><br>
-                    <input type="text" name="name"><br>
-                    <span>Email:</span><br>
-                    <input type="text" name="email"><br>
-                    <span>Message:</span><br>
-                    <textarea id="message" type="text" name="message"></textarea>
-                    <br>
-                    <button>Submit</button>
-                  </form>   
+                <p>Email: ZacharyAllenDrake@gmail.com</p>
+                <p>Phone Number: (818) 645-9051</p>
+                <br>
+                <a class="links" href="https://www.linkedin.com/in/zachary-drake-036baa11a/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+                <a class="links" href="https://github.com/ZachDrake" target="_blank"><i class="fab fa-github-square fa-3x"></i></a>
             </div>
         </div>
     </div>
