added constructor word game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,19 +47,19 @@
                 <img src="assets/images/ride-defied.PNG">
             </div>
 
+            <div class="port-img">
+                <div class="img-label">
+                    <a href="https://github.com/ZachDrake/constructor-word-game" target="_blank"><h6>Constructor Word Game</h6></a>
+                </div>
+                <img src="assets/images/constructor.PNG">
+            </div>
+
             <!-- <div class="port-img">
                 <div class="img-label">
                     <a href="#" target="_blank"><h6></h6></a>
                 </div>
-                <img src="assets/images/4.jpg">
-            </div>
-
-            <div class="port-img">
-                <div class="img-label">
-                    <a href="#" target="_blank"><h6></h6></a>
-                </div>
                 <img src="assets/images/5.jpg">
-            </div> -->
+            </div> --> -->
 
         </div>
     </div>
