friend finder added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,12 +54,12 @@
                 <img src="assets/images/constructor.PNG">
             </div>
 
-            <!-- <div class="port-img">
+            <div class="port-img">
                 <div class="img-label">
-                    <a href="#" target="_blank"><h6></h6></a>
+                    <a href="https://radiant-citadel-21336.herokuapp.com/" target="_blank"><h6>Friend Finder</h6></a>
                 </div>
-                <img src="assets/images/5.jpg">
-            </div> --> -->
+                <img src="assets/images/friend-finder.PNG">
+            </div>
 
         </div>
     </div>
