added clicky game

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
 
             <div class="port-img">
                 <div class="img-label">
-                    <a href="https://khzooming.github.io/CircusBear/" target="_blank"><h6>Ride Defied</h6></a>
+                    <a href="https://zachdrake.github.io/clicky-game/" target="_blank"><h6>Clicky Game</h6></a>
                 </div>
-                <img src="assets/images/ride-defied.PNG">
+                <img src="assets/images/clicky.PNG">
             </div>
 
             <div class="port-img">
